# virtual-display-rs

./: .gitignore  CLA.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  VirtualDisplayDriver.inf  installCert.bat  rust-toolchain.toml
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build-app.yml  build-driver.yml  build.yml  cla.yml  clippy.yml  stale.yml
.github/workflows/build_res/: pr.pfx
Virtual Display Driver Control/: .editorconfig  App.xaml  App.xaml.cs  GitVersion.yml  Ipc.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Virtual Display Driver Control.csproj  Virtual Display Driver Control.sln  WindowTools.cs  app.manifest
Virtual Display Driver Control/Common/: AppSettings.cs  Logging.cs  Settings.cs  Version.cs
Virtual Display Driver Control/Helpers/: MaterialHelper.cs  ThemeHelper.cs
Virtual Display Driver Control/Properties/: launchSettings.json
Virtual Display Driver Control/Properties/PublishProfiles/: win10-x64.pubxml
Virtual Display Driver Control/Views/: MonitorsView.xaml  MonitorsView.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs
driver-ipc/: Cargo.toml
driver-ipc/src/: lib.rs
driver-logger/: Cargo.toml
driver-logger/src/: lib.rs  win_debug.rs  win_logger.rs
examples/: monitor_control.py
installer/: install-cert.bat  main.wxs
installer/files/: License.rtf  install.reg  uninstall.reg
ipc-types/: Cargo.toml
rust/: Cargo.toml  Makefile.toml  rust-toolchain.toml
rust/bindings/c/: Cargo.toml  build.rs
rust/bindings/c/bindings/c/: bindings.h
rust/bindings/c/bindings/cpp/: bindings.h
rust/bindings/c/src/: client.rs  lib.rs  utils.rs
rust/bindings/dart/: Makefile.toml  README.md  build.dart  flutter_rust_bridge.yaml  pubspec.yaml
rust/bindings/dart/example/: client_example.dart  driver_client_example.dart  vdd_example.dart
rust/bindings/dart/lib/: errors.dart  test.dart  vdd.dart
rust/bindings/dart/lib/src/: init.dart
rust/bindings/dart/rust/: Cargo.toml
rust/bindings/dart/rust/src/: frb_generated.rs  lib.rs
rust/bindings/dart/rust/src/api/: client.rs  driver_client.rs  mock.rs  mod.rs  sub_module.rs
rust/bindings/dart/test/: vdd_test.dart
rust/bindings/dart_vdd/: Makefile.toml  build.dart  pubspec.yaml
rust/bindings/dart_vdd/example/: dart_vdd_example.dart
rust/bindings/dart_vdd/lib/: dart_vdd.dart
rust/bindings/dart_vdd/rust/: Cargo.toml
rust/bindings/dart_vdd/rust/src/: api.rs  frb_generated.io.rs  frb_generated.rs
rust/bindings/dart_vdd/test/: dart_vdd_test.dart
rust/bindings/python/: Cargo.toml  Makefile.toml
rust/bindings/python/src/: lib.rs  utils.rs
rust/bindings/pyvdd/: Cargo.toml  Makefile.toml
rust/bindings/pyvdd/src/: lib.rs  utils.rs
rust/dart_vdd/: flutter_rust_bridge.yaml
rust/dart_vdd/rust/: Cargo.toml
rust/dart_vdd/rust/src/: frb_generated.io.rs  frb_generated.rs
rust/dart_vdd/test/: dart_vdd_test.dart
rust/driver-ipc/: Cargo.toml
rust/driver-ipc/src/: client.rs  core.rs  driver_client.rs  lib.rs  mock.rs  sync.rs
rust/driver-ipc/src/sync/: client.rs  driver_client.rs
rust/driver-logger/: Cargo.toml  LICENSE  build.rs
rust/driver-logger/src/: win_logger.rs
rust/pyvdd/: Cargo.toml
rust/pyvdd/src/: lib.rs
rust/vdd-user-session-service/: Cargo.toml
rust/vdd-user-session-service/src/: main.rs  service.rs  set_privileges.rs
rust/virtual-display-driver/: Cargo.toml  Makefile.toml  VirtualDisplayDriver.inf  build.rs
rust/virtual-display-driver-cli/: Cargo.toml  Makefile.toml
rust/virtual-display-driver-cli/src/: client.rs  main.rs  mode.rs
rust/virtual-display-driver/.cargo/: config.toml
rust/virtual-display-driver/src/: callbacks.rs  context.rs  direct_3d_device.rs  edid.rs  helpers.rs  ipc.rs  lib.rs  panic.rs  swap_chain_processor.rs
rust/wdf-umdf/: Cargo.toml
rust/wdf-umdf-sys/: Cargo.toml  build.rs
rust/wdf-umdf-sys/c/: wrapper.h
rust/wdf-umdf-sys/src/: bindings.rs  lib.rs
rust/wdf-umdf/src/: iddcx.rs  lib.rs  wdf.rs
signatures/version1/: cla.json
vdd_control/: .metadata  README.md  pubspec.yaml
vdd_control/lib/: main.dart
vdd_control/windows/: CMakeLists.txt
vdd_control/windows/runner/: Runner.rc  main.cpp
virtual-display-driver/: Cargo.toml  Makefile.toml  VirtualDisplayDriver.inf  build.rs
virtual-display-driver-cli/: Cargo.toml  Makefile.toml
virtual-display-driver-cli/src/: client.rs  main.rs
virtual-display-driver-control/: Cargo.toml  Makefile.toml  build.rs
virtual-display-driver-control/src/: actions.rs  app.rs  backtrace.rs  ipc.rs  load_icon.rs  main.rs  monitor.rs  panic.rs  popup.rs  save.rs  toggle_switch.rs  ui.rs
virtual-display-driver-control/src/ui/: add_resolution_window.rs  main_window.rs  monitor_window.rs
virtual-display-driver/.cargo/: config.toml
virtual-display-driver/src/: callbacks.rs  context.rs  device_context.rs  direct_3d_device.rs  edid.rs  entry.rs  helpers.rs  indirect_device_context.rs  ipc.rs  lib.rs  monitor_listener.rs  panic.rs  popup.rs  swap_chain_processor.rs
virtual_monitor_driver/: Cargo.toml
virtual_monitor_driver/src/: direct_3d_device.rs  entry.rs  lib.rs  panic.rs
wdf-umdf/: Cargo.toml
wdf-umdf-sys/: Cargo.toml  build.rs
wdf-umdf-sys/c/: wrapper.h
wdf-umdf-sys/src/: bindings.rs  lib.rs  ntstatus.rs
wdf-umdf/src/: iddcx.rs  lib.rs  raw.rs  wdf.rs
windebug-logger/: Cargo.toml
windebug-logger/src/: lib.rs
winlog/: Cargo.toml  README.md
winlog/res/: eventmsgs.mc
winlog/src/: lib.rs
