[workspace]
resolver = "2"
members = [
    "virtual-display-driver",
    "wdf-umdf-sys",
    "wdf-umdf",
    "winlog",
    "driver-ipc",
]

[profile.release]
strip = true
codegen-units = 1
lto = true

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
pedantic = "warn"
