[workspace]
resolver = "2"
members = [
    "virtual-display-driver",
    "wdf-umdf-sys",
    "wdf-umdf",
    "driver-ipc",
    "driver-logger",
    "virtual-display-driver-cli",
]

[profile.release]
strip = true
codegen-units = 1
lto = true

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
pedantic = "warn"
multiple_unsafe_ops_per_block = "deny"
ignored_unit_patterns = "allow"
missing_errors_doc = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
