[package]
name = "virtual-display-driver-cli"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
driver-ipc = { path = "../driver-ipc" }
eyre = "0.6.11"
owo-colors = "4.0.0"
serde_json = "1.0.108"
windows = { version = "0.52.0", features = ["Win32_Foundation"] }
win-pipes = { git = "https://github.com/MolotovCherry/WinPipes-rs" }
lazy_format = "2.0.3"
joinery = "3.1.0"
serde = "1.0.193"
