[package]
name = "virtual-display-driver-control"
version = "0.1.2"
edition = "2021"

[dependencies]
winreg = "0.51.0"
eframe = "0.23.0"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive", "rc"] }
driver-ipc = { path = "../driver-ipc" }
directories = "5.0.1"
backtrace = "0.3.69"
egui = "0.23.0"
egui_extras = "0.23.0"

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",

    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
]

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "virtual-display-driver-control.exe"
FileDescription = "Virtual Display Driver Control app"
LegalCopyright = "Copyright © 2023"
