[package]
name = "virtual-display-driver"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0.49"
wdf-umdf-sys = { path = "../wdf-umdf-sys" }
wdf-umdf = { path = "../wdf-umdf" }
log = "0.4.20"
widestring = "1.0.2"
bytemuck = { version = "1.14.0", features = ["derive"] }
serde_json = "1.0.108"
driver-ipc = { path = "../driver-ipc" }
winreg = "0.51.0"
winlog = { path = "../winlog" }
win-pipes = { git = "https://github.com/MolotovCherry/WinPipes-rs" }

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
]

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "VirtualDisplayDriver.dll"
ProductName = "Virtual Display Driver"
FileDescription = "Adds virtual displays"
