[package]
name = "wdf-umdf-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0.14"
bytemuck = "1.13.1"
thiserror = "1.0.48"

[build-dependencies]
# bindgen 66 has a bug which panics, but 65 works
# seems fixed in master, but there's no version bump yet
# https://github.com/rust-lang/rust-bindgen/pull/2567
bindgen = "0.65.1"
thiserror = "1.0.40"
winreg = "0.51.0"
