[package]
name = "driver-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
owo-colors = "4.0.0"
serde_json = "1.0.120"
windows = { version = "0.58.0", features = ["Win32_Foundation"] }
lazy_format = "2.0.3"
joinery = "3.1.0"
winreg = "0.52.0"
tokio = { version = "1.38.1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "net",
    "macros",
] }
tokio-stream = { version = "0.1.15", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.38.1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "net",
    "macros",
    "io-util",
] }
