[package]
name = "driver-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.22", features = ["std"] }
env_filter = { version = "0.1.2", default-features = false, optional = true }
widestring = "1.1.0"
winreg = "0.52.0"
thiserror = "1.0.63"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_System_Diagnostics_Debug"]

[dependencies.windows-sys]
version = "0.52.0"
features = ["Win32_Foundation", "Win32_System_EventLog"]

[build-dependencies]
winresource = "0.1.17"

[lints]
workspace = true
