[package]
name = "pyvdd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["eyre"] }
win-pipes = { git = "https://github.com/MolotovCherry/WinPipes-rs" }
winreg = "0.52.0"
serde_json = "1.0.113"
driver-ipc = { path = "../driver-ipc" }
eyre = "0.6.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

[lints]
workspace = true
