[package]
name = "pyvdd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["eyre"] }
win-pipes = { git = "https://github.com/MolotovCherry/WinPipes-rs" }
winreg = "0.52.0"
serde_json = "1.0.114"
driver-ipc = { path = "../driver-ipc" }
eyre = "0.6.12"

[lints]
workspace = true
