[package]
name = "virtual-display-driver-cli"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
color-eyre = "0.6.3"
driver-ipc = { path = "../driver-ipc" }
eyre = "0.6.12"
owo-colors = "4.0.0"
serde_json = "1.0.127"
lazy_format = "2.0.3"
joinery = "3.1.0"
serde = "1.0.210"
