[package]
name = "virtual-display-driver"
version = "0.4.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0.63"
anyhow = "1.0.86"
wdf-umdf-sys = { path = "../wdf-umdf-sys" }
wdf-umdf = { path = "../wdf-umdf" }
log = "0.4.22"
bytemuck = { version = "1.16.1", features = ["derive"] }
serde_json = "1.0.121"
driver-ipc = { path = "../driver-ipc" }
driver-logger = { path = "../driver-logger" }
tokio = { version = "1.39.1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "io-util",
    "sync",
] }

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
]

[build-dependencies]
winres = "0.1.12"
vergen-gix = { version = "1.0.0", features = ["build"] }

[package.metadata.winres]
OriginalFilename = "VirtualDisplayDriver.dll"
ProductName = "Virtual Display Driver"
FileDescription = "Adds virtual displays"
