[package]
name = "pyvdd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.1", features = ["eyre"] }
driver-ipc = { path = "../../driver-ipc" }
eyre = "0.6.12"

[dependencies.windows]
version = "0.54.0"
features = ["Win32_Foundation", "Win32_System_Threading"]

[lints]
workspace = true
